fix box padding on small screens

--- a/public/website.scss
+++ b/public/website.scss
@@ -96,10 +96,6 @@ h3 {
 
   .box {
     padding: 0 25px;
-
-    @media (max-width: 799px) {
-      padding: 0;
-    }
   }
 
   // make latest blog entries more consistent
